# mlops-ws

./: .gitignore  README.md  gcp.sh  main.py  pyproject.toml
notebooks/: 1_Training.ipynb  2_Training-withBasketFeatures.ipynb  3_Training_SaveModel.ipynb  4_Evidently.ipynb  6_Training_MLFlow.ipynb
notebooks/mlops/019db024-4ec5-7a4e-b4fa-8e269aaaba01/: metadata.json
notebooks/mlops/019db024-4ec5-7a4e-b4fa-8e269aaaba01/snapshots/: 019db024-514d-7ba8-92d5-49704ff8846d.json  019db024-75d5-7e87-b9ae-e3d138cc7313.json  019db024-78d7-7fcb-9fd3-cb143639c1d1.json
serving/: flask-server.py  flask-server_model.py  request.sh  request_remote.sh  request_render.sh
training/: model_v1.py
