[project]
name = "mlops-ws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evidently>=0.7.21",
    "flask>=3.1.3",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "mlflow>=1.27.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
]
